--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Destin Trails</title>
+    <link rel="icon" href="./assets/favicon.ico">
+    <link rel="stylesheet" href="style.css">
+    <title>Destin Trails Resort</title>
 </head>
+
 <body>
-    
+    <header class="banner">
+        <h1>Destin Trails Resort </h1>
+        <img class="banner-image" src="./assets/sunset.jpg" alt="sunset">
+    </header>
+    <nav id="nav">
+        <a href="">Home</a>
+        <a href="./condo.html">Condos</a>
+        <a href="./todo.html">What to Do</a>
+    </nav>
+    <div class="showcase">
+        <img src="./assets/coast.jpg" alt="coast">
+    </div>
+    <main class="content">
+        <h2 class="title">Enjoy Nature in Luxury</h2>
+        <p>
+            <b>Beach Resort</b> offers a special lodging experience on the California North Coast with panormaic views
+            of the Florida Coast. Your stay at Destin Trails Resort includes a sumptuously private yurt and a
+            cooked-to-order breakfast each morning.
+        </p>
+        <ul>
+            <li>Unwind in the heated outdoor pool and whirlpool</li>
+            <li>Explore the coast on your own or join our guided tours</li>
+            <li>Relax in our lodge while enjoying complimentary appetizers and beverages</li>
+            <li>Savor nightly fine dining with an ocean view</li>
+        </ul>
+        
+        <div class="contact">
+            <b>Destin Trails Resort</b>
+            <br>
+            <span>12456 Destin Trails Road</span>
+            <br>
+            <span>Destin, FL 32549</span>
+            <span><p>850-555-5555</p></span>
+        </div>
+    </main>
+    <footer>
+        <small>
+            Copyright &copy; <em>2019 Destin Trails Resort</em>
+            <br>
+            <a href="">wayne@wayne.com</a>
+        </small>
+    </footer>
 </body>
+
 </html>
